# rau

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst  rau.common.rst  rau.common.utils.rst  rau.optimizer.rst  rau.rst
notebooks/analysis/: TOPIX-Factors-01.html
src/rau/common/utils/: __init__.py  io.py  noteboook.py
src/rau/optimizer/: __init__.py  portfolio_builder.py
